--- a/나만의 일기장/myDiary.css
+++ b/나만의 일기장/myDiary.css
@@ -17,7 +17,7 @@ button {
 }
 #diaryName {
   font-weight: 700;
-  font-size: 18px;
+  font-size: 16px;
   line-height: 16px;
   letter-spacing: -0.01em;
 }
@@ -47,7 +47,7 @@ button {
       border: none;
       border-radius: 8px;
       font-weight: 700;
-      font-size: 18px;
+      font-size: 16px;
       line-height: 24px;
       letter-spacing: -0.01em;
       padding: 5px 10px;
@@ -67,7 +67,7 @@ button {
     cursor: pointer;
   }
 
-  @media (min-width: 1201px) {
+  @media (min-width: 1100px) {
     .mainContent {
       display: flex;
       flex-direction: column;
@@ -178,28 +178,29 @@ button {
   top: calc(50% - 150px / 2);
   padding: 18px 15px;
   border-radius: 24px;
-  border: 1px solid #d4d3d3;
-  background-color: #f2f2f2;
+  border: 1px solid var(--btnBorder);
+  background-color: var(--modalBackColor);
 
   z-index: 400;
 }
 .title {
   margin: 10px 0;
   font-weight: 600;
+  color: var(--fontColor);
 }
 .completeModal {
   margin-bottom: 0.9rem;
-  color: #484444;
+  color: var(--fontColor);
 }
 .closeBtn {
   width: 100%;
-  color: white;
-  background-color: black;
+  color: var(--font);
+  background-color: var(--confirmBtn);
   padding: 8px 10px;
   border: none;
   border-radius: 0.4rem;
   text-wrap: nowrap;
-  border: 1px solid #666;
+  border: 1px solid var(--borderColor);
   cursor: pointer;
 }
 
@@ -223,7 +224,6 @@ button {
   opacity: 0.9;
 }
 #addContent {
-  background-color: #f2f2f2;
   z-index: 50;
   position: absolute;
   width: 540px;
@@ -236,17 +236,112 @@ button {
   top: calc(50% - 450px / 2);
   padding: 18px 15px;
   border-radius: 24px;
-  border: 1px solid #d4d3d3;
+  background-color: var(--modalBackColor);
+  border: 1px solid var(--borderColor);
 }
 
-.addTitle {
-  font-size: 18px;
-  font-weight: 500;
-  margin-bottom: 1rem;
+/* 토글!!!!!! */
+.firstDiv {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  .addTitle {
+    font-size: 18px;
+    font-weight: 500;
+    margin-bottom: 1rem;
+    color: var(--fontColor);
+  }
+  .toggleContainer {
+    display: flex;
+    align-items: center;
+    p {
+      margin-right: 0.7rem;
+    }
+  }
 }
+
+.toggle {
+  appearance: none;
+  width: 35px;
+  height: 20px;
+  border-radius: 1rem;
+  background-color: gray;
+}
+
+.toggle::after {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  display: block;
+  content: '';
+  background-color: white;
+  margin: 2px;
+
+  transition: margin-left 0.3s;
+}
+.toggle:checked {
+  /*checkbox가 체크가 되었을때 */
+  background-color: rgb(31, 17, 226);
+}
+.toggle:checked::after {
+  /* 체크가 된 부분에 그 이후에 발생하는 css */
+  margin-left: 18px;
+}
+
+.toggleBtn {
+  color: var(--fontColor);
+}
+
+/* 다크모드 */
+:root {
+  --fontColor: black;
+  --baseCheck: blue;
+  --baseInputBack: white;
+  --btnBackColor: white;
+  --inputPlaceholder: gray;
+  --borderRadius: #d4d3d3;
+
+  --modalBackColor: #f2f2f2;
+
+  --btnBorder: #000000;
+
+  --borderColor: #d4d3d3;
+
+  /* 완료버튼 */
+  --confirmBtn: #1c1c1c;
+  --font: #fff;
+}
+
+[isOnOff='off'] {
+  --fontColor: white;
+  --baseCheck: pink;
+  --baseInputBack: black;
+  --btnBackColor: #1c1c1c;
+  --inputPlaceholder: lightgray;
+
+  /* btn border 색상 */
+  --borderRadius: #333333;
+
+  /* 취소버튼 border */
+  --btnBorder: #5f5f5f;
+  --borderColor: #1c1c1c;
+
+  --modalBackColor: #1c1c1c;
+
+  --confirmBtn: #fff;
+  --font: black;
+}
+
+#addContent {
+  background-color: var(--modalBackColor);
+  border: 1px solid var(--borderColor);
+}
+
 .subTitle {
   font-size: 15px;
   margin-bottom: 0.7rem;
+  color: var(--fontColor);
 }
 .feelingBtn {
   display: grid;
@@ -256,6 +351,24 @@ button {
   margin-bottom: 1rem;
 }
 
+.titleContainer input::placeholder {
+  color: var(--inputPlaceholder);
+}
+.titleContainer input {
+  background-color: var(--baseInputBack);
+  color: var(--fontColor);
+}
+.contentContainer textarea {
+  background-color: var(--baseInputBack);
+  color: var(--fontColor);
+}
+.contentContainer textarea::placeholder {
+  color: var(--inputPlaceholder);
+}
+.feelingBtn label {
+  color: var(--fontColor);
+}
+
 .titleContainer {
   display: flex;
   flex-direction: column;
@@ -263,9 +376,10 @@ button {
   margin-bottom: 1rem;
   p {
     font-size: 13px;
+    color: var(--fontColor);
   }
   #titleContent {
-    border: 1px solid #d4d3d3;
+    border: 1px solid var(--borderRadius);
     border-radius: 0.7rem;
     padding: 8px;
     width: 100%;
@@ -278,6 +392,7 @@ button {
   margin-bottom: 1rem;
   p {
     font-size: 13px;
+    color: var(--fontColor);
   }
   #contentContainer {
     width: 100%;
@@ -305,9 +420,9 @@ button {
   border: none;
 }
 #cancelBtn {
-  background-color: #ffffff;
-  color: #000;
-  border: 1px solid #000;
+  background-color: var(--btnBackColor);
+  color: var(--fontColor);
+  border: 1px solid var(--btnBorder);
   margin-right: 10px;
 }
 
@@ -346,15 +461,105 @@ button {
   }
 }
 
+.findContainer {
+  display: flex;
+  justify-content: space-between;
+}
+
 .filter {
   margin-bottom: 30px;
-  /* position: sticky;
-  top: 60px; */
-  #filterBtn {
-    border: 1px solid #c7c7c7;
-    border-radius: 4px;
-    padding: 5px;
-  }
+  margin-right: 1rem;
+}
+
+/* Filter custom */
+.filterTitle {
+  appearance: none;
+  width: 100px;
+  /* height: 40px; */
+  border: 1px solid #c7c7c7;
+  border-radius: 8px;
+  padding: 8px 10px;
+  cursor: pointer;
+  margin-bottom: 10px;
+
+  --inputValue: '전체';
+}
+.filterTitle::after {
+  content: var(--inputValue);
+}
+
+.filterTitle:checked + .emotionFilter {
+  display: block;
+}
+
+.emotionFilter {
+  display: none;
+  width: 100px;
+  border: 1px solid #c7c7c7;
+  border-radius: 8px;
+  overflow: hidden;
+  position: absolute;
+  z-index: 100;
+  background-color: #f2f2f2;
+}
+
+.emotionFilter input {
+  display: none;
+}
+.emotionFilter li:hover {
+  background: url('./images/check.png') no-repeat right 8px center;
+
+  background-size: 0.8em;
+}
+.emotionFilter li:checked {
+  background: url('./images/check.png') no-repeat right 8px center;
+
+  background-size: 0.8em;
+}
+.emotionFilter label {
+  display: block;
+  /* height: 40px; */
+  padding: 10px;
+  font-size: 14px;
+  cursor: pointer;
+  position: relative;
+}
+
+.selected {
+  z-index: 10;
+  background-color: #e3eddf;
+  background: url('./images/check.png') no-repeat right 8px center;
+  background-size: 0.8em;
+}
+
+.emotionFilter label:hover {
+  color: #299c00;
+
+  cursor: pointer;
+}
+
+.emotionFilter label:hover::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #e3eddf;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.searchBar input {
+  border: 1px solid #c7c7c7;
+  border-radius: 20px;
+  padding: 8px 12px 8px 27px;
+  width: 450px;
+  background: url('./images/searchIcon.png') no-repeat scroll 8px center;
+  background-size: 1em;
+}
+.searchBar ::placeholder {
+  color: #b1afaf;
 }
 
 .newCard {
@@ -412,7 +617,12 @@ button {
 /* 모바일 환경 */
 /* 1200px 이하에서 레이아웃 변경 */
 
-@media (max-width: 1200px) {
+@media (max-width: 1100px) {
+  .findContainer {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 10px;
+  }
   .container {
     padding: 20px;
     overflow: scroll;
@@ -461,6 +671,9 @@ button {
     top: 20%; /* 화면 상단에서 20%만큼 떨어지게  */
     overflow: scroll;
   }
+  .searchBar input {
+    width: 100%;
+  }
 }
 
 @media (max-width: 480px) {
@@ -477,6 +690,11 @@ button {
   }
 }
 
+.warning {
+  padding: 20px 0 0 0;
+  height: 300px;
+  font-size: 17px;
+}
 /* 모바일 환경 */
 /* 1200px 이하에서 레이아웃 변경 */
 
