--- a/homework/diary/index.css
+++ b/homework/diary/index.css
@@ -89,14 +89,15 @@
 
 .CSS_메인 {
     width: 1168px;
-    /* height: 1167px; */
+    height: 1167px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+
+    /* justify-content: space-between; */
     margin-bottom: 40px;
 }
 
-.CSS_메인왼쪽 {
+.CSS_메인왼쪽일기보여주는곳 {
     width: 784px;
     display: flex;
     flex-direction: row;
@@ -189,17 +190,13 @@
 }
 
 .CSS_메인오른쪽 {
-    /* background-color: red; */
-
-    width: 360px;
-    height: 604px;
+    width: 312px;
+    height: 624px;
     padding: 24px;
     border-radius: 16px;
     border: 1px solid var(--Gray-Gray-200, #d4d3d3);
     background: var(--Gray-W, #fff);
     z-index: 999; /*카드 */
-    /* margin: 0 0 0 24px; */
-    /* position: relative; */
 }
 
 .CSS_플로팅버튼 {
@@ -228,7 +225,7 @@
 }
 
 .CSS_라디오모음 {
-    width: 312px;
+    width: 80%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -277,7 +274,7 @@
 .CSS_등록하기 {
     border-radius: 8px;
     background-color: #c7c7c7;
-    width: 312px;
+    width: 100%;
     height: 48px;
     padding: 8px 10px;
     flex: 1 0 0;
@@ -347,11 +344,12 @@
     padding: 20px 0;
 }
 
-.CSS_수정버튼상자 {
+.CSS_버튼상자 {
     width: 1168px;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
+    gap: 16px;
 }
 
 .CSS_수정버튼 {
@@ -360,6 +358,16 @@
     border-radius: 8px;
     padding: 8px 10px;
     gap: 10px;
+    cursor: pointer;
+}
+
+.CSS_삭제버튼 {
+    width: 51px;
+    height: 40px;
+    border-radius: 8px;
+    padding: 8px 10px;
+    gap: 10px;
+    cursor: pointer;
 }
 
 .CSS_감정날짜상자 {
@@ -424,4 +432,31 @@
     border-radius: 8px;
     background: var(--Gray-B, #000);
     color: #fff;
+    cursor: pointer;
+}
+
+.CSS_회고담는상자 {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+}
+
+.CSS_회고내용 {
+    color: #000;
+    font-family: 'Pretendard Variable';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    letter-spacing: -0.16px;
+}
+
+.CSS_회고작성일 {
+    color: var(--Gray-Gray-600, #777);
+    font-family: 'Pretendard Variable';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    letter-spacing: -0.16px;
 }
