--- a/homework/diary/edit.css
+++ b/homework/diary/edit.css
@@ -148,3 +148,28 @@ body {
     line-height: 24px; /* 133.333% */
     letter-spacing: -0.18px;
 }
+.CSS_회고담는상자 {
+    display: flex;
+    flex-direction: row;
+    gap: 12px;
+}
+
+.CSS_회고내용 {
+    color: #000;
+    font-family: 'Pretendard Variable';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+    letter-spacing: -0.16px;
+}
+
+.CSS_회고작성일 {
+    color: var(--Gray-Gray-600, #777);
+    font-family: 'Pretendard Variable';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    letter-spacing: -0.16px;
+}
