--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -137,10 +137,10 @@
   animation-duration: 1s;
   animation-iteration-count: infinite;
 }
-.dogImage{
+.dogImage {
   width: 30rem;
-  aspect-ratio:  1 / 1;
-  border-radius: 1.5rem;;
+  aspect-ratio: 1 / 1;
+  border-radius: 1.5rem;
   object-fit: cover;
   background-color: lightblue;
   border-radius: 1.5rem;
@@ -181,14 +181,14 @@
   align-items: center;
   gap: 0.625rem;
   border-radius: 0.5rem;
-  border: 0.063rem solid var(--Gray-Gray-300, #C7C7C7);
-  background: var(--Gray-W, #FFF);
+  border: 0.063rem solid var(--Gray-Gray-300, #c7c7c7);
+  background: var(--Gray-W, #fff);
   justify-content: space-between;
   margin-bottom: 0.5rem;
 }
 .dropdown_search_box {
   display: flex;
-  gap: 1rem
+  gap: 1rem;
 }
 .dropdown_name {
   width: 7.5rem;
@@ -196,7 +196,7 @@
 #photo_dropdown {
   appearance: none;
   --boxText: "기본형";
-  color: var(--Gray-Gray-900, #1C1C1C);
+  color: var(--Gray-Gray-900, #1c1c1c);
   font-size: 1rem;
   font-style: normal;
   font-weight: 500;
@@ -207,7 +207,7 @@
 #mood_dropdown {
   appearance: none;
   --boxText: "전체";
-  color: var(--Gray-Gray-900, #1C1C1C);
+  color: var(--Gray-Gray-900, #1c1c1c);
   font-size: 1rem;
   font-style: normal;
   font-weight: 500;
@@ -230,8 +230,8 @@
   align-items: start;
   gap: 0.625rem;
   border-radius: 0.5rem;
-  border: 0.063rem solid var(--Gray-Gray-300, #C7C7C7);
-  background: var(--Gray-W, #FFF);
+  border: 0.063rem solid var(--Gray-Gray-300, #c7c7c7);
+  background: var(--Gray-W, #fff);
 }
 .dropdown li {
   width: 100%;
@@ -244,13 +244,13 @@
 }
 .dropdown li:hover {
   background: rgba(58, 181, 15, 0.05);
-  color: #299C00;
+  color: #299c00;
 }
 .dropdown li div > img {
   width: 1rem;
   display: none;
 }
-.dropdown li:hover .check{
+.dropdown li:hover .check {
   display: block;
 }
 .dropdown input {
@@ -263,10 +263,9 @@
   padding: 0.75rem 1rem;
   gap: 0.5rem;
   border-radius: 6.25rem;
-  border: 0.063rem solid var(--Gray-Gray-300, #C7C7C7);
+  border: 0.063rem solid var(--Gray-Gray-300, #c7c7c7);
   width: 100%;
   display: flex;
-
 }
 .search_img {
   width: 1.5rem;
@@ -279,12 +278,23 @@
   outline: none;
 }
 .search_bar input::placeholder {
-  color: var(--Gray-Gray-400, #ABABAB);
+  color: var(--Gray-Gray-400, #ababab);
   font-size: 1rem;
   font-style: normal;
   font-weight: 500;
   line-height: 1.5rem;
   letter-spacing: -0.01rem;
+}
+.no_search_result_box {
+  display: flex;
+  width: 50rem;
+  height: 14.563rem;
+  justify-content: center;
+  align-items: center;
+}
+.no_search_result {
+  color: red;
+  font-weight: bold;
 }
 .btn_register_diary {
   width: 6.875rem;
@@ -472,33 +482,33 @@
 }
 :root {
   --basicModalBorderColor: #d4d3d3;
-  --basicBackgroundColor: #FFF;
+  --basicBackgroundColor: #fff;
   --basicColor: #000;
-  --basicInputBackgroundColor: #FFF;
-  --basicInputBorderColor: #D4D3D3;
-  --basicConfirmModalBackgroundColor: #FFF;
+  --basicInputBackgroundColor: #fff;
+  --basicInputBorderColor: #d4d3d3;
+  --basicConfirmModalBackgroundColor: #fff;
   --basicConfirmModalColor: #000;
   --basicConfirmModalButton: #000;
   --basicConfirmModalButtonColor: #fff;
   --basicConfirmModalInputBorderColor: #d4d3d3;
   --basicPageNumberColor: #777;
-  --basicPageNumberBackgroundColor: #FFF;
+  --basicPageNumberBackgroundColor: #fff;
 }
 [mode="dark"] {
   --basicModalBorderColor: #333;
-  --basicBackgroundColor: #1C1C1C;
-  --basicColor: #FFF;
+  --basicBackgroundColor: #1c1c1c;
+  --basicColor: #fff;
   --basicInputBackgroundColor: #000;
   --basicInputBorderColor: #333;
   --basicConfirmModalBackgroundColor: #1e1e1e;
-  --basicConfirmModalColor: #FFF;
-  --basicConfirmModalButton: #FFF;
+  --basicConfirmModalColor: #fff;
+  --basicConfirmModalButton: #fff;
   --basicConfirmModalButtonColor: #000;
-  --basicConfirmModalInputBorderColor: #333
+  --basicConfirmModalInputBorderColor: #333;
 }
 [page="clickedPage"] {
   --basicPageNumberColor: #000;
-  --basicPageNumberBackgroundColor: #F2F2F2;
+  --basicPageNumberBackgroundColor: #f2f2f2;
 }
 .diary_entry_title {
   color: var(--basicColor);
@@ -687,11 +697,11 @@
   justify-content: center;
   gap: 12px;
 }
-#page_number_list{
+#page_number_list {
   display: flex;
   gap: 16px;
 }
-.page_number{
+.page_number {
   border: none;
   border-radius: 8px;
   width: 32px;
