--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -692,34 +692,34 @@
 }
 .page_list_box {
   display: flex;
-  padding-block: 40px;
+  padding-block: 2.5rem;
   width: 100%;
   justify-content: center;
-  gap: 12px;
+  gap: 0.75rem;
   align-items: center;
 }
 .go_to_page_set{
   border: none;
   background-color: #FFF;
-  width: 24px;
-  height: 24px;
+  width: 1.5rem;
+  height: 1.5rem;
 }
 #page_number_list {
   display: flex;
-  gap: 16px;
+  gap: 1rem;
 }
 .page_number {
   border: none;
-  border-radius: 8px;
-  width: 32px;
-  height: 32px;
+  border-radius: 0.5rem;
+  width: 2rem;
+  height: 2rem;
   color: var(--basicPageNumberColor);
   text-align: center;
-  font-size: 16px;
+  font-size: 1rem;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px;
-  letter-spacing: -0.16px;
+  line-height: 1.5rem;
+  letter-spacing: -0.01rem;
   background: var(--basicPageNumberBackgroundColor);
 }
 .footer_layout {
