hide 가리기용 클래스 추가

--- a/css/index.css
+++ b/css/index.css
@@ -49,6 +49,10 @@
   --max-width: 73rem;
 }
 
+.hide {
+  display: none !important;
+}
+
 [lightStatus=off] {
   --basic-font-color: #fff;
   --basic-bg-color: #000;
