--- a/scss/index.scss
+++ b/scss/index.scss
@@ -64,6 +64,10 @@
   --max-width: 73rem; // 1168px
 }
 
+.hide {
+  display: none !important;
+}
+
 [lightStatus="off"] {
   --basic-font-color: #fff;
   --basic-bg-color: #000;
