그리드 비율 수정 및 다이어리 페이징 전용 스타일 추가

--- a/css/main.css
+++ b/css/main.css
@@ -160,7 +160,7 @@ section .diaryList {
 }
 section .diaryList ul {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, minmax(auto, calc(25% - 1rem)));
   gap: 1.5rem;
 }
 section .diaryList ul li {
@@ -274,4 +274,11 @@ section .diaryList ul li figure .infoTop .diaryDate {
   font-size: var(--font-size-1);
   color: var(--font-color-7);
   font-weight: 400;
+}
+
+.diaryPagination {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-top: 20px;
 }/*# sourceMappingURL=main.css.map */
