--- a/homework/일기장만들기/day05_일기수정p.css
+++ b/homework/일기장만들기/day05_일기수정p.css
@@ -104,9 +104,67 @@
 .editBox04 button:hover {
     color: #F2F2F2;
     background-color: #000000;
+    transform: skew(15deg)
 }
 
 h2 {
     font-size: 14px;
     font-weight: 500;
 }
+
+.commentLIst{
+    width: 1168px;
+    height: 173px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+
+.commentBox {
+    width: 100%;
+    height: 85px;
+    display: flex;
+    flex-direction: column;
+    gap: 13px;
+}
+
+
+.commentWriteBox{
+    width: 100%;
+    height: 48px;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.commentInput {
+    width: 1101px;
+    height: 48px;
+    border: 1px solid gray;
+    border-radius: 8px;
+
+
+}
+
+.commentBtn {
+    width: 51px;
+    height: 48px;
+    padding: 8px 10px 8px 10px;
+    background-color: #000000;
+    border-radius: 8px;
+    color: white;
+
+
+    
+}
+
+.commentPlus {
+    width: 100%;
+    height: 24px;
+    display: flex;
+    gap: 12px;
+
+}
+
+
