--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -4,6 +4,15 @@
   padding: 0;
   max-width: 100%;
 }
+body {
+	font-family: 'Pretendard-Regular';
+}
+@font-face {
+    font-family: 'Pretendard-Regular';
+    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
 .layout {
   display: flex;
   width: 120rem;
