페이지네이션 완성

--- a/Section2/css/index.css
+++ b/Section2/css/index.css
@@ -97,7 +97,7 @@ body {
   width: 100%;
   display: flex;
   gap: 16px;
-  align-items: center;
+  /* align-items: center; */
   justify-content: space-between;
   text-align: left;
   font-size: 14px;
