--- a/DAY04/index.css
+++ b/DAY04/index.css
@@ -14,6 +14,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 1.25rem;
 }
 
 a {
@@ -40,6 +41,7 @@ nav div span {
 .상단사진 {
   display: flex;
   justify-content: center;
+  padding: 0 1.25rem;
 }
 
 .상단사진 img {
