[240912] font pretendard apply

--- a/style/dailyStyle.css
+++ b/style/dailyStyle.css
@@ -44,7 +44,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: "medium", sans-serif;
+    font-family: "Pretendard-Regular", sans-serif;
 }
 html {
     font-size: 16px;
