--- a/CSS&JS 마스터/수정.css
+++ b/CSS&JS 마스터/수정.css
@@ -1,272 +1,278 @@
 * {
-    box-sizing: border-box;
-    padding: 0px;
-    margin: 0px;
+  box-sizing: border-box;
+  padding: 0px;
+  margin: 0px;
+  font-family: fontVar;
+}
+
+@font-face {
+  font-family: fontVar;
+  src: url("./assets/Pretendard-Black.woff2");
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .layout {
-    width: 1168px;
-    margin: 0 20px 40px;
+  width: 1168px;
+  margin: 0 20px 40px;
 }
 
 header {
-    width: 100%;
-    height: 60px;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 16px;
-    padding: 20px 0px;
+  width: 100%;
+  height: 60px;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 16px;
+  padding: 20px 0px;
 }
 
 .header_text {
-    width: 100%;
-    height: 40px;
-    gap: 10px;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 16px;
-    letter-spacing: -1px;
-    color: #000000;
+  width: 100%;
+  height: 40px;
+  gap: 10px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 16px;
+  letter-spacing: -1px;
+  color: #000000;
 }
 
 main {
-    width: 100%;
-    height: 100%;
-    border-bottom: 1px;
-    padding-bottom: 16px;
-    gap: 24px;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  height: 100%;
+  border-bottom: 1px;
+  padding-bottom: 16px;
+  gap: 24px;
+  display: flex;
+  flex-direction: column;
 }
 
 .main_header {
-    width: 100%;
-    gap: 16px;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  gap: 16px;
+  display: flex;
+  flex-direction: column;
 }
 
 .main_header_text {
-    width: 100%;
-    height: 24px;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 24px;
-    letter-spacing: -1px;
-    color: #000000;
+  width: 100%;
+  height: 24px;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 24px;
+  letter-spacing: -1px;
+  color: #000000;
 }
 
 .main_header_radio {
-    width: 100%;
-    gap: 20px;
-    display: flex;
+  width: 100%;
+  gap: 20px;
+  display: flex;
 }
 
 .radioButton {
-    border-radius: 8px;
-    gap: 8px;
-    display: flex;
+  border-radius: 8px;
+  gap: 8px;
+  display: flex;
 }
 
 .radioButton input {
-    width: 24px;
-    height: 24px;
-    display: block;
+  width: 24px;
+  height: 24px;
+  display: block;
 }
 
 .radioButton label {
-    height: 20px;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 20px;
-    letter-spacing: -1px;
-    color: #333333;
-    display: block;
-    line-height: 24px;
+  height: 20px;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 20px;
+  letter-spacing: -1px;
+  color: #333333;
+  display: block;
+  line-height: 24px;
 }
 
 .main_body_title {
-    width: 100%;
-    height: 76px;
-    gap: 8px;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  height: 76px;
+  gap: 8px;
+  display: flex;
+  flex-direction: column;
 }
 
 .main_body_title label {
-    width: 100%;
-    height: 20px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 20px;
-    letter-spacing: -1px;
-    color: #333333;
+  width: 100%;
+  height: 20px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: -1px;
+  color: #333333;
 }
 
 .main_body_title input {
-    width: 100%;
-    height: 48px;
-    border-radius: 8px;
-    border: 1px solid #d4d3d3;
-    padding: 12px 16px;
-    gap: 10px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: -1px;
-    color: #000000;
+  width: 100%;
+  height: 48px;
+  border-radius: 8px;
+  border: 1px solid #d4d3d3;
+  padding: 12px 16px;
+  gap: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -1px;
+  color: #000000;
 }
 
 .main_body_content {
-    width: 100%;
-    gap: 8px;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  gap: 8px;
+  display: flex;
+  flex-direction: column;
 }
 
 .main_body_content label {
-    width: 100%;
-    height: 20px;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 20px;
-    letter-spacing: -1px;
-    color: #333333;
+  width: 100%;
+  height: 20px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: -1px;
+  color: #333333;
 }
 
 .main_body_content input {
-    width: 100%;
-    border-radius: 8px;
-    border: 1px solid #d4d3d3;
-    padding: 12px 16px;
-    gap: 10px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: -1px;
-    color: #000000;
+  width: 100%;
+  border-radius: 8px;
+  border: 1px solid #d4d3d3;
+  padding: 12px 16px;
+  gap: 10px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: -1px;
+  color: #000000;
 }
 
 .main_body_content textarea {
-    width: 100%;
-    height: 128px;
-    border-radius: 8px;
-    border: 1px solid #d4d3d3;
-    padding: 12px 16px;
-    gap: 10px;
-    background-color: #ffffff;
-    resize: none;
+  width: 100%;
+  height: 128px;
+  border-radius: 8px;
+  border: 1px solid #d4d3d3;
+  padding: 12px 16px;
+  gap: 10px;
+  background-color: #ffffff;
+  resize: none;
 }
 
 .main_button {
-    width: 100%;
-    height: 48px;
-    gap: 16px;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  height: 48px;
+  gap: 16px;
+  display: flex;
+  justify-content: center;
 }
 
 .main_button button {
-    display: block;
-    width: 104px;
-    height: 48px;
-    border-radius: 8px;
-    border: 1px solid #000000;
-    padding: 8px 10px;
-    gap: 10px;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: -1px;
-    color: #1c1c1c; 
-    background-color: #ffffff;
-    transition: 0.01s;
+  display: block;
+  width: 104px;
+  height: 48px;
+  border-radius: 8px;
+  border: 1px solid #000000;
+  padding: 8px 10px;
+  gap: 10px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: -1px;
+  color: #1c1c1c;
+  background-color: #ffffff;
+  transition: 0.01s;
 }
 
 .main_button button:hover {
-    background-color: #000000;
-    color: #f2f2f2;
+  background-color: #000000;
+  color: #f2f2f2;
 }
 
 .main_button button:active {
-    transform: rotateZ(30deg);
+  transform: rotateZ(30deg);
 }
 
-.remembranceBox{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+.remembranceBox {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 }
 
 .inputBox {
-    width: 100%;
-    gap: 13px;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  gap: 13px;
+  display: flex;
+  flex-direction: column;
 }
 
 .inputTitle {
-    width: 100%;
-    height: 24px;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 24px;
-    letter-spacing: -1px;
+  width: 100%;
+  height: 24px;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: -1px;
 }
 
 .inputTextBox {
-    width: 100%;
-    display: flex;
-    gap: 16px;
+  width: 100%;
+  display: flex;
+  gap: 16px;
 }
 
 #inputText {
-    width: 100%;
-    height: 48px;
-    border-radius: 8px;
-    border: 1px solid #d4d3d3;
-    padding: 12px 16px;
+  width: 100%;
+  height: 48px;
+  border-radius: 8px;
+  border: 1px solid #d4d3d3;
+  padding: 12px 16px;
 }
 
 .inputButton {
-    width: 52px;
-    height: 48px;
-    border-radius: 8px;
-    line-height: 48px;
-    background-color: #000000;
-    color: white;
-    text-align: center;
-    cursor: pointer;
+  width: 52px;
+  height: 48px;
+  border-radius: 8px;
+  line-height: 48px;
+  background-color: #000000;
+  color: white;
+  text-align: center;
+  cursor: pointer;
 }
 
 #remembranceTextBox {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
 
 .remembranceText {
-    width: 100%;
-    border-bottom: 1px solid #e4e4e4;
-    padding-bottom: 10px;
+  width: 100%;
+  border-bottom: 1px solid #e4e4e4;
+  padding-bottom: 10px;
 }
 
 @media (max-width: 1200px) {
-    .layout {
-        width: 100%;
-        padding: 0 25px;
-    }
+  .layout {
+    width: 100%;
+    padding: 0 25px;
+  }
 
-    .main_header_radio {
-        flex-direction: column;
-    }
+  .main_header_radio {
+    flex-direction: column;
+  }
 }
