--- a/homework/diary/index.css
+++ b/homework/diary/index.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Pretendard Variable';
 }
 
 .body {
@@ -11,7 +10,7 @@
 
 .CSS_레이아웃 {
     /* width: 1168px; */
-    width: 100%;
+    width: 100vw;
     height: auto;
     min-height: 100%;
     padding-bottom: 40px;
@@ -44,26 +43,6 @@
     margin-top: 24px;
 }
 
-.CSS_행복 {
-    color: #ea5757;
-}
-
-.CSS_슬픔 {
-    color: #28b4e1;
-}
-
-.CSS_놀람 {
-    color: #d59029;
-}
-
-.CSS_화남 {
-    color: #777;
-}
-
-.CSS_기타 {
-    color: #a229ed;
-}
-
 .CSS_감정선택상자 {
     width: 1168px;
     margin-bottom: 42px;
@@ -88,17 +67,15 @@
 }
 
 .CSS_메인 {
-    width: 1168px;
-    height: 1167px;
     display: flex;
     flex-direction: row;
-
-    /* justify-content: space-between; */
-    margin-bottom: 40px;
+    justify-content: space-between;
+    /* margin-bottom: 40px; */
 }
 
 .CSS_메인왼쪽일기보여주는곳 {
     width: 784px;
+    height: 300px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -196,7 +173,7 @@
     border-radius: 16px;
     border: 1px solid var(--Gray-Gray-200, #d4d3d3);
     background: var(--Gray-W, #fff);
-    z-index: 999; /*카드 */
+    z-index: 999;
 }
 
 .CSS_플로팅버튼 {
@@ -283,11 +260,11 @@
 
 /* 푸터 */
 .CSS_푸터 {
-    top: 160px;
+    /* top: 160px; */
     width: 100%;
     height: 160px;
-    position: relative;
-    transform: translateY(-100%);
+    /* position: relative; */
+    /* transform: translateY(-100%); */
     background: var(--Gray-Gray-50, #f2f2f2);
     display: flex;
     justify-content: center;
@@ -333,4 +310,24 @@
     font-weight: 300;
     line-height: 16px;
     letter-spacing: -0.1408px;
+}
+
+.CSS_행복 {
+    color: #ea5757;
+}
+
+.CSS_슬픔 {
+    color: #28b4e1;
+}
+
+.CSS_놀람 {
+    color: #d59029;
+}
+
+.CSS_화남 {
+    color: #777;
+}
+
+.CSS_기타 {
+    color: #a229ed;
 }
