refactor: 불필요한 변수 삭제 및 addEventListener를 onclick으로 변경

--- a/다이어리/diary.css
+++ b/다이어리/diary.css
@@ -333,7 +333,7 @@ body {
   gap: 1.5rem;
   padding-top: 2.625rem;
 }
-.diary_entry_container {
+#diary_entry_container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 1.5rem;
